fixed:getchapter,Dockerfile
